public interface SudokuChecker {
    void check();
}
